@@ -20,6 +20,30 @@ package|;
 end_package
 
 begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -167,6 +191,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FileStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FileSystem
 import|;
 end_import
@@ -195,7 +233,7 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|HBaseTestCase
+name|HBaseTestingUtility
 import|;
 end_import
 
@@ -433,6 +471,46 @@ name|Level
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|After
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
 begin_comment
 comment|/** JUnit test case for HLog */
 end_comment
@@ -441,8 +519,6 @@ begin_class
 specifier|public
 class|class
 name|TestHLog
-extends|extends
-name|HBaseTestCase
 block|{
 specifier|private
 specifier|static
@@ -557,19 +633,47 @@ argument_list|)
 expr_stmt|;
 block|}
 specifier|private
+specifier|static
+name|Configuration
+name|conf
+decl_stmt|;
+specifier|private
+specifier|static
+name|FileSystem
+name|fs
+decl_stmt|;
+specifier|private
+specifier|static
 name|Path
 name|dir
 decl_stmt|;
 specifier|private
-name|Path
-name|oldLogDir
-decl_stmt|;
-specifier|private
+specifier|static
 name|MiniDFSCluster
 name|cluster
 decl_stmt|;
+specifier|private
+specifier|final
+specifier|static
+name|HBaseTestingUtility
+name|TEST_UTIL
+init|=
+operator|new
+name|HBaseTestingUtility
+argument_list|()
+decl_stmt|;
+specifier|private
+specifier|static
+name|Path
+name|hbaseDir
+decl_stmt|;
+specifier|private
+specifier|static
+name|Path
+name|oldLogDir
+decl_stmt|;
 annotation|@
-name|Override
+name|Before
 specifier|public
 name|void
 name|setUp
@@ -577,10 +681,67 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-comment|// Make block sizes small.
-name|this
+name|FileStatus
+index|[]
+name|entries
+init|=
+name|fs
 operator|.
-name|conf
+name|listStatus
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/"
+argument_list|)
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|FileStatus
+name|dir
+range|:
+name|entries
+control|)
+block|{
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|dir
+operator|.
+name|getPath
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|After
+specifier|public
+name|void
+name|tearDown
+parameter_list|()
+throws|throws
+name|Exception
+block|{   }
+annotation|@
+name|BeforeClass
+specifier|public
+specifier|static
+name|void
+name|setUpBeforeClass
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// Make block sizes small.
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -591,9 +752,10 @@ operator|*
 literal|1024
 argument_list|)
 expr_stmt|;
-name|this
+name|TEST_UTIL
 operator|.
-name|conf
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -603,7 +765,10 @@ literal|1
 argument_list|)
 expr_stmt|;
 comment|// needed for testAppendClose()
-name|conf
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setBoolean
 argument_list|(
@@ -613,7 +778,10 @@ literal|true
 argument_list|)
 expr_stmt|;
 comment|// quicker heartbeat interval for faster DN death notification
-name|conf
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -622,7 +790,10 @@ argument_list|,
 literal|5000
 argument_list|)
 expr_stmt|;
-name|conf
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -631,7 +802,10 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-name|conf
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -641,7 +815,10 @@ literal|5000
 argument_list|)
 expr_stmt|;
 comment|// faster failover with cluster.shutdown();fs.close() idiom
-name|conf
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -650,7 +827,10 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-name|conf
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
 operator|.
 name|setInt
 argument_list|(
@@ -659,153 +839,86 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-name|cluster
-operator|=
-operator|new
-name|MiniDFSCluster
+name|TEST_UTIL
+operator|.
+name|startMiniCluster
 argument_list|(
-name|conf
-argument_list|,
 literal|3
-argument_list|,
-literal|true
-argument_list|,
-operator|(
-name|String
-index|[]
-operator|)
-literal|null
 argument_list|)
 expr_stmt|;
-comment|// Set the hbase.rootdir to be the home directory in mini dfs.
-name|this
-operator|.
 name|conf
+operator|=
+name|TEST_UTIL
 operator|.
-name|set
-argument_list|(
-name|HConstants
+name|getConfiguration
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|=
+name|TEST_UTIL
 operator|.
-name|HBASE_DIR
-argument_list|,
-name|this
-operator|.
+name|getDFSCluster
+argument_list|()
+expr_stmt|;
+name|fs
+operator|=
 name|cluster
 operator|.
 name|getFileSystem
 argument_list|()
-operator|.
-name|getHomeDirectory
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-argument_list|)
 expr_stmt|;
-name|super
-operator|.
-name|setUp
-argument_list|()
-expr_stmt|;
-name|this
-operator|.
-name|dir
+name|hbaseDir
 operator|=
 operator|new
 name|Path
 argument_list|(
-literal|"/hbase"
-argument_list|,
-name|getName
+name|TEST_UTIL
+operator|.
+name|getConfiguration
 argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"hbase.rootdir"
+argument_list|)
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|fs
-operator|.
-name|exists
-argument_list|(
-name|dir
-argument_list|)
-condition|)
-block|{
-name|fs
-operator|.
-name|delete
-argument_list|(
-name|dir
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-block|}
-name|this
-operator|.
 name|oldLogDir
 operator|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
-name|dir
+name|hbaseDir
 argument_list|,
-name|HConstants
-operator|.
-name|HREGION_OLDLOGDIR_NAME
+literal|".oldlogs"
 argument_list|)
 expr_stmt|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|void
-name|tearDown
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-if|if
-condition|(
-name|this
-operator|.
-name|fs
-operator|.
-name|exists
-argument_list|(
-name|this
-operator|.
 name|dir
-argument_list|)
-condition|)
-block|{
-name|this
-operator|.
-name|fs
-operator|.
-name|delete
+operator|=
+operator|new
+name|Path
 argument_list|(
-name|this
-operator|.
-name|dir
+name|hbaseDir
 argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-block|}
-name|shutdownDfs
-argument_list|(
-name|cluster
-argument_list|)
-expr_stmt|;
-name|super
-operator|.
-name|tearDown
+name|getName
 argument_list|()
+argument_list|)
 expr_stmt|;
+block|}
+specifier|private
+specifier|static
+name|String
+name|getName
+parameter_list|()
+block|{
+comment|// TODO Auto-generated method stub
+return|return
+literal|"TestHLog"
+return|;
 block|}
 comment|/**    * Just write multiple logs then split.  Before fix for HADOOP-2283, this    * would fail.    * @throws IOException    */
+annotation|@
+name|Test
 specifier|public
 name|void
 name|testSplit
@@ -839,8 +952,6 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
 name|dir
 argument_list|,
 name|HConstants
@@ -854,18 +965,12 @@ init|=
 operator|new
 name|HLog
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|logdir
 argument_list|,
-name|this
-operator|.
 name|oldLogDir
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|,
 literal|null
@@ -1115,8 +1220,6 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
 name|dir
 argument_list|,
 literal|"splits"
@@ -1136,12 +1239,8 @@ name|splitsdir
 argument_list|,
 name|logdir
 argument_list|,
-name|this
-operator|.
 name|oldLogDir
 argument_list|,
-name|this
-operator|.
 name|fs
 argument_list|,
 name|conf
@@ -1177,6 +1276,8 @@ block|}
 block|}
 block|}
 comment|/**    * Test new HDFS-265 sync.    * @throws Exception    */
+annotation|@
+name|Test
 specifier|public
 name|void
 name|Broken_testSync
@@ -1203,8 +1304,6 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
 name|dir
 argument_list|,
 name|getName
@@ -1300,8 +1399,6 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
 name|dir
 argument_list|,
 literal|"hlogdir"
@@ -1313,18 +1410,12 @@ init|=
 operator|new
 name|HLog
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|subdir
 argument_list|,
-name|this
-operator|.
 name|oldLogDir
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|,
 literal|null
@@ -1837,6 +1928,8 @@ argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * Test the findMemstoresWithEditsOlderThan method.    * @throws IOException    */
+annotation|@
+name|Test
 specifier|public
 name|void
 name|testFindMemstoresWithEditsOlderThan
@@ -2104,8 +2197,6 @@ name|HLog
 operator|.
 name|getReader
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|splits
@@ -2169,14 +2260,6 @@ init|=
 name|entry
 operator|.
 name|getKey
-argument_list|()
-decl_stmt|;
-name|WALEdit
-name|kv
-init|=
-name|entry
-operator|.
-name|getEdit
 argument_list|()
 decl_stmt|;
 name|String
@@ -2274,6 +2357,8 @@ comment|// 1. HDFS-200 (append support)
 comment|// 2. HDFS-988 (SafeMode should freeze file operations
 comment|//              [FSNamesystem.nextGenerationStampForBlock])
 comment|// 3. HDFS-142 (on restart, maintain pendingCreates)
+annotation|@
+name|Test
 specifier|public
 name|void
 name|testAppendClose
@@ -2281,17 +2366,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|this
-operator|.
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-literal|"dfs.support.append"
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
 name|byte
 index|[]
 name|tableName
@@ -2333,8 +2407,6 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
 name|dir
 argument_list|,
 literal|"hlogdir"
@@ -2346,8 +2418,6 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|this
-operator|.
 name|dir
 argument_list|,
 literal|"hlogdir_archive"
@@ -2359,16 +2429,12 @@ init|=
 operator|new
 name|HLog
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|subdir
 argument_list|,
 name|archdir
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|,
 literal|null
@@ -2447,6 +2513,14 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+name|int
+name|namenodePort
+init|=
+name|cluster
+operator|.
+name|getNameNodePort
+argument_list|()
+decl_stmt|;
 specifier|final
 name|Path
 name|walPath
@@ -2459,8 +2533,6 @@ decl_stmt|;
 comment|// Stop the cluster.  (ensure restart since we're sharing MiniDFSCluster)
 try|try
 block|{
-name|this
-operator|.
 name|cluster
 operator|.
 name|getNameNode
@@ -2473,8 +2545,6 @@ operator|.
 name|SAFEMODE_ENTER
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
 name|cluster
 operator|.
 name|shutdown
@@ -2504,8 +2574,6 @@ name|e
 argument_list|)
 expr_stmt|;
 block|}
-name|this
-operator|.
 name|fs
 operator|.
 name|close
@@ -2523,31 +2591,60 @@ block|}
 finally|finally
 block|{
 comment|// Restart the cluster
-name|this
+while|while
+condition|(
+name|cluster
 operator|.
+name|isClusterUp
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Waiting for cluster to go down"
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
 name|cluster
 operator|=
 operator|new
 name|MiniDFSCluster
 argument_list|(
+name|namenodePort
+argument_list|,
 name|conf
 argument_list|,
-literal|2
+literal|5
 argument_list|,
 literal|false
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
 argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
 name|cluster
 operator|.
 name|waitActive
 argument_list|()
 expr_stmt|;
-name|this
-operator|.
 name|fs
 operator|=
 name|cluster
@@ -2568,8 +2665,6 @@ comment|// namenode triggers lease recovery upon append request
 name|Method
 name|setLeasePeriod
 init|=
-name|this
-operator|.
 name|cluster
 operator|.
 name|getClass
@@ -2653,16 +2748,12 @@ specifier|final
 name|FileSystem
 name|recoveredFs
 init|=
-name|this
-operator|.
 name|fs
 decl_stmt|;
 specifier|final
 name|Configuration
 name|rlConf
 init|=
-name|this
-operator|.
 name|conf
 decl_stmt|;
 class|class
@@ -2775,14 +2866,10 @@ name|SequenceFile
 operator|.
 name|Reader
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|walPath
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|)
 decl_stmt|;
@@ -2798,8 +2885,6 @@ name|HLog
 operator|.
 name|newKey
 argument_list|(
-name|this
-operator|.
 name|conf
 argument_list|)
 decl_stmt|;
@@ -2855,6 +2940,8 @@ argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * Tests that we can write out an edit, close, and then read it back in again.    * @throws IOException    */
+annotation|@
+name|Test
 specifier|public
 name|void
 name|testEditAdd
@@ -2909,12 +2996,8 @@ name|fs
 argument_list|,
 name|dir
 argument_list|,
-name|this
-operator|.
 name|oldLogDir
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|,
 literal|null
@@ -3447,6 +3530,8 @@ block|}
 block|}
 block|}
 comment|/**    * @throws IOException    */
+annotation|@
+name|Test
 specifier|public
 name|void
 name|testAppend
@@ -3484,17 +3569,6 @@ argument_list|(
 literal|"row"
 argument_list|)
 decl_stmt|;
-name|this
-operator|.
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-literal|"dfs.support.append"
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
 name|Reader
 name|reader
 init|=
@@ -3506,18 +3580,12 @@ init|=
 operator|new
 name|HLog
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|dir
 argument_list|,
-name|this
-operator|.
 name|oldLogDir
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|,
 literal|null
@@ -4008,6 +4076,8 @@ block|}
 block|}
 block|}
 comment|/**    * Test that we can visit entries before they are appended    * @throws Exception    */
+annotation|@
+name|Test
 specifier|public
 name|void
 name|testVisitors
@@ -4045,35 +4115,18 @@ argument_list|(
 literal|"row"
 argument_list|)
 decl_stmt|;
-name|this
-operator|.
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-literal|"dfs.support.append"
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
 name|HLog
 name|log
 init|=
 operator|new
 name|HLog
 argument_list|(
-name|this
-operator|.
 name|fs
 argument_list|,
 name|dir
 argument_list|,
-name|this
-operator|.
 name|oldLogDir
 argument_list|,
-name|this
-operator|.
 name|conf
 argument_list|,
 literal|null
